Add support for Shell printf format strings, part 2.
* gettext-tools/po/POTFILES.in: Add src/format-sh-printf.c.
* gettext-tools/tests/format-sh-printf-1: Use 'printf' instead of 'echo',
because 'echo' processes escape sequences on macOS, OpenBSD, Solaris.

--- a/gettext-tools/po/POTFILES.in
+++ b/gettext-tools/po/POTFILES.in
@@ -41,6 +41,7 @@ src/format-ruby.c
 src/format-rust.c
 src/format-scheme.c
 src/format-sh.c
+src/format-sh-printf.c
 src/format-smalltalk.c
 src/format-tcl.c
 src/hostname.c
