Shell: Add another unit test.
* gettext-tools/tests/lang-sh-1: Renamed from gettext-tools/tests/lang-sh.
* gettext-tools/tests/lang-sh-2: New file, based on
gettext-tools/tests/lang-sh-1.
* gettext-tools/tests/Makefile.am (TESTS): Remove lang-sh. Add lang-sh-1,
lang-sh-2.

--- a/gettext-tools/tests/Makefile.am
+++ b/gettext-tools/tests/Makefile.am
@@ -242,7 +242,7 @@ TESTS = gettext-1 gettext-2 \
 	lang-rust \
 	lang-go \
 	lang-ruby \
-	lang-sh lang-bash \
+	lang-sh-1 lang-sh-2 lang-bash \
 	lang-gawk \
 	lang-lua \
 	lang-pascal \
