Python: Add another unit test.
* gettext-tools/tests/lang-python-2: New file, based on
gettext-tools/tests/lang-python-1.
* gettext-tools/tests/Makefile.am (TESTS): Add it.

--- a/gettext-tools/tests/Makefile.am
+++ b/gettext-tools/tests/Makefile.am
@@ -234,7 +234,7 @@ TESTS = gettext-1 gettext-2 \
 	gettextpo-1 sentence-1 \
 	lang-po \
 	lang-c lang-c++ lang-c++20 lang-c++26 lang-objc \
-	lang-python-1 \
+	lang-python-1 lang-python-2 \
 	lang-java \
 	lang-csharp \
 	lang-javascript \
