gettext-runtime: New programs 'printf_gettext', 'printf_ngettext'.
* autogen.sh (GNULIB_MODULES_RUNTIME_FOR_SRC): Add c-ctype, c-strtold,
fzprintf-posix, mbrtoc32, mbszero, quote, stdint-h, strtoimax, strtold,
strtoumax, xstrtold.
* gettext-runtime/src/printf-command.h: New file.
* gettext-runtime/src/printf-command.c: New file.
* gettext-runtime/src/printf_gettext.c: New file.
* gettext-runtime/src/Makefile.am (bin_PROGRAMS): Add printf_gettext,
printf_ngettext.
(noinst_LIBRARIES, libgrtsrc_a_SOURCES): New variables.
(printf_gettext_SOURCES, printf_gettext_CFLAGS, printf_gettext_LDFLAGS): New
variables.
(printf_ngettext_SOURCES, printf_ngettext_CFLAGS, printf_ngettext_LDFLAGS): New
variables.
(LDADD): Add libgrtsrc.a.
* gettext-runtime/po/POTFILES.in: Add src/printf-command.c,
src/printf_gettext.c, src/printf_ngettext.c.
* gettext-runtime/man/printf_gettext.x: New file.
* gettext-runtime/man/printf_ngettext.x: New file.
* gettext-runtime/man/Makefile.am (man_aux): Add printf_gettext.x,
printf_ngettext.x.
(man_MAN1GEN): Add printf_gettext.1, printf_ngettext.1.
(man_MAN1IN): Add printf_gettext.1.in, printf_ngettext.1.in.
(man_HTML1GEN): Add printf_gettext.1.html, printf_ngettext.1.html.
(man_HTML1IN): Add printf_gettext.1.html.in, printf_ngettext.1.html.in.
(printf_gettext.1, rintf_ngettext.1, printf_gettext.1.in, printf_ngettext.1.in):
Add dependencies.
(printf_gettext.1.html, printf_ngettext.1.html, printf_gettext.1.html.in,
printf_ngettext.1.html.in): Likewise.
* gettext-runtime/Makefile.am (distdir1): Depend on man/printf_gettext.1 and
man/printf_ngettext.1.
(man/printf_gettext.1, man/printf_ngettext.1): Depend on gen-man1.
(gen-man1): Make src/printf_gettext, src/printf_ngettext and printf_gettext.1,
printf_ngettext.1.
* gettext-runtime/doc/rt-printf_gettext.texi: New file.
* gettext-runtime/doc/rt-printf_ngettext.texi: New file.
* gettext-runtime/doc/Makefile.am (EXTRA_DIST): Add them.
* gettext-tools/doc/lang-sh.texi (printf_gettext Invocation,
printf_ngettext

--- a/.gitignore
+++ b/.gitignore
@@ -473,6 +473,10 @@
 /gettext-runtime/man/gettext.1.html.in
 /gettext-runtime/man/ngettext.1.in
 /gettext-runtime/man/ngettext.1.html.in
+/gettext-runtime/man/printf_gettext.1.in
+/gettext-runtime/man/printf_gettext.1.html.in
+/gettext-runtime/man/printf_ngettext.1.in
+/gettext-runtime/man/printf_ngettext.1.html.in
 /gettext-runtime/man/bind_textdomain_codeset.3
 /gettext-runtime/man/bind_textdomain_codeset.3.html
 /gettext-runtime/man/bindtextdomain.3
@@ -699,6 +703,10 @@ autom4te.cache/
 /gettext-runtime/man/gettext.1.html
 /gettext-runtime/man/ngettext.1
 /gettext-runtime/man/ngettext.1.html
+/gettext-runtime/man/printf_gettext.1
+/gettext-runtime/man/printf_gettext.1.html
+/gettext-runtime/man/printf_ngettext.1
+/gettext-runtime/man/printf_ngettext.1.html
 /gettext-tools/libgrep/libgrep.a
 /gettext-tools/src/**/*.class
 /gettext-tools/src/gettext.jar
@@ -716,6 +724,10 @@ autom4te.cache/
 /gettext-runtime/src/gettext.exe
 /gettext-runtime/src/ngettext
 /gettext-runtime/src/ngettext.exe
+/gettext-runtime/src/printf_gettext
+/gettext-runtime/src/printf_gettext.exe
+/gettext-runtime/src/printf_ngettext
+/gettext-runtime/src/printf_ngettext.exe
 /gettext-runtime/tests/test-lock
 /gettext-runtime/tests/test-lock.exe
 /gettext-tools/libgettextpo/gettext-po.h
