--- a/gettext-tools/examples/hello-sh/Makefile.am
+++ b/gettext-tools/examples/hello-sh/Makefile.am
@@ -11,7 +11,7 @@ ACLOCAL_AMFLAGS = -I m4
 SUBDIRS = m4 po
 
 # The list of programs that are built.
-bin_SCRIPTS = hello
+bin_SCRIPTS = hello-1 hello-2 hello-3
 
 # Additional files to be distributed.
 EXTRA_DIST = autogen.sh autoclean.sh
