--- a/gettext-tools/examples/hello-sh/configure.ac
+++ b/gettext-tools/examples/hello-sh/configure.ac
@@ -4,7 +4,7 @@ dnl
 dnl Configuration file - processed by autoconf.
 
 AC_INIT([hello-sh], [0])
-AC_CONFIG_SRCDIR([hello.sh])
+AC_CONFIG_SRCDIR([hello-1.sh])
 AM_INIT_AUTOMAKE([1.11])
 
 dnl The installed program must know where to find its message catalogs.
@@ -25,7 +25,9 @@ dnl Support for the po directory.
 AM_PO_SUBDIRS
 
 AC_CONFIG_FILES([Makefile])
-AC_CONFIG_FILES([hello:hello.sh], [chmod a+x hello])
+AC_CONFIG_FILES([hello-1:hello-1.sh], [chmod a+x hello-1])
+AC_CONFIG_FILES([hello-2:hello-2.sh], [chmod a+x hello-2])
+AC_CONFIG_FILES([hello-3:hello-3.sh], [chmod a+x hello-3])
 AC_CONFIG_FILES([m4/Makefile])
 AC_CONFIG_FILES([po/Makefile], [AM_POSTPROCESS_PO_MAKEFILE])
 AC_OUTPUT
