xgettext: JavaScript: Add one more test.
Reported by <fiurgeist@gmail.com>
at <https://savannah.gnu.org/bugs/index.php?67337>.

* gettext-tools/tests/xgettext-javascript-14: New file.
* gettext-tools/tests/Makefile.am (TESTS): Add it.

--- a/gettext-tools/tests/Makefile.am
+++ b/gettext-tools/tests/Makefile.am
@@ -131,7 +131,7 @@ TESTS = gettext-1 gettext-2 \
 	xgettext-javascript-4 xgettext-javascript-5 xgettext-javascript-6 \
 	xgettext-javascript-7 xgettext-javascript-8 xgettext-javascript-9 \
 	xgettext-javascript-10 xgettext-javascript-11 xgettext-javascript-12 \
-	xgettext-javascript-13 \
+	xgettext-javascript-13 xgettext-javascript-14 \
 	xgettext-javascript-stackovfl-1 xgettext-javascript-stackovfl-2 \
 	xgettext-javascript-stackovfl-3 xgettext-javascript-stackovfl-4 \
 	xgettext-javascript-stackovfl-5 xgettext-javascript-stackovfl-6 \
