--- a/gettext-tools/misc/autopoint.in
+++ b/gettext-tools/misc/autopoint.in
@@ -277,7 +277,7 @@ unset CLICOLOR_FORCE GREP_OPTIONS
       --version | --versio | --versi | --vers | --ver | --ve | --v )
         func_version true
         exit 0 ;;
-      -- ) # Stop option prcessing
+      -- ) # Stop option processing
         shift; break ;;
       -* )
         echo "autopoint: unknown option $1" 1>&2
