--- a/gettext-tools/misc/gettextize.in
+++ b/gettext-tools/misc/gettextize.in
@@ -283,7 +283,7 @@ unset CLICOLOR_FORCE GREP_OPTIONS
       --version | --versio | --versi | --vers | --ver | --ve | --v )
         func_version
         exit 0 ;;
-      -- ) # Stop option prcessing
+      -- ) # Stop option processing
         shift; break ;;
       -* )
         echo "gettextize: unknown option $1" 1>&2
