tests: Fix a lang-java failure on native Windows.
* gettext-tools/tests/init-env.in (CLASSPATH_SEPARATOR): New variable.
* gettext-tools/tests/lang-java: Use it instead of hardcoding ':'.

--- a/gettext-tools/tests/init-env.in
+++ b/gettext-tools/tests/init-env.in
@@ -15,6 +15,7 @@ LTLIBINTL="@LTLIBINTL@"
 JAVA_CHOICE="@JAVA_CHOICE@"
 BUILDJAVA="@BUILDJAVA@"
 TESTJAVA="@TESTJAVA@"
+CLASSPATH_SEPARATOR="@CLASSPATH_SEPARATOR@"
 CSHARP_CHOICE="@CSHARP_CHOICE@"
 BUILDCSHARP="@BUILDCSHARP@"
 TESTCSHARP="@TESTCSHARP@"
