tests: Recognize the *-*-windows* config triplets introduced on 2023-06-26.
* gettext-tools/tests/init-env.in: Treat windows* as equivalent to mingw*.
* gettext-tools/tests/intl-7: Likewise.
* gettext-tools/tests/lang-c: Likewise.
* gettext-tools/tests/lang-c++: Likewise.
* gettext-tools/tests/lang-c++-boost: Likewise.
* gettext-tools/tests/lang-c++20: Likewise.
* gettext-tools/tests/lang-c++26: Likewise.
* gettext-tools/tests/lang-d: Likewise.
* gettext-tools/tests/lang-modula2: Likewise.
* gettext-tools/tests/lang-objc: Likewise.
* gettext-tools/tests/msgfilter-8: Likewise.

--- a/gettext-tools/tests/init-env.in
+++ b/gettext-tools/tests/init-env.in
@@ -41,7 +41,7 @@ ARCHIVE_VERSION="@ARCHIVE_VERSION@"
 wabs_srcdir="$abs_srcdir"
 wabs_top_srcdir="$abs_top_srcdir"
 case "$host_os" in
-  mingw*)
+  mingw* | windows*)
     if (cygpath --version) >/dev/null 2>/dev/null; then
       wabs_srcdir=`cygpath -w "$abs_srcdir"`
       wabs_top_srcdir=`cygpath -w "$abs_top_srcdir"`
