--- a/gettext-tools/configure.ac
+++ b/gettext-tools/configure.ac
@@ -637,6 +637,7 @@ AC_SUBST([TREE_SITTER_VERSION])
 AC_SUBST([TREE_SITTER_GO_VERSION])
 AC_SUBST([TREE_SITTER_RUST_VERSION])
 AC_SUBST([TREE_SITTER_TYPESCRIPT_VERSION])
+AC_SUBST([TREE_SITTER_OCAML_VERSION])
 AC_SUBST([TREE_SITTER_D_VERSION])
 
 dnl Determine the directory name to use for version-specific data files.
