OCaml support: Add a unit test.
* gettext-tools/tests/lang-ocaml: New file.
* gettext-tools/tests/Makefile.am (TESTS): Add it.
* HACKING: Document dependencies for lang-ocaml.

--- a/gettext-tools/tests/Makefile.am
+++ b/gettext-tools/tests/Makefile.am
@@ -250,6 +250,7 @@ TESTS = gettext-1 gettext-2 \
 	lang-pascal \
 	lang-modula2 \
 	lang-d \
+	lang-ocaml \
 	lang-smalltalk \
 	lang-vala \
 	lang-tcl \
