examples: Add hello-ocaml example.
* gettext-tools/examples/hello-ocaml/INSTALL: New file.
* gettext-tools/examples/hello-ocaml/autogen.sh: New file.
* gettext-tools/examples/hello-ocaml/autoclean.sh: New file.
* gettext-tools/examples/hello-ocaml/dune.in: New file.
* gettext-tools/examples/hello-ocaml/dune-project.in: New file.
* gettext-tools/examples/hello-ocaml/hello.ml.in: New file.
* gettext-tools/examples/hello-ocaml/Makefile.am: New file.
* gettext-tools/examples/hello-ocaml/configure.ac: New file.
* gettext-tools/examples/hello-ocaml/m4/Makefile.am: New file.
* gettext-tools/examples/hello-ocaml/po/LINGUAS: New file.
* gettext-tools/examples/hello-ocaml/po/Makefile.am: New file.
* gettext-tools/examples/Makefile.am (EXAMPLESFILES, EXAMPLESDIRS): Add
hello-ocaml.
* gettext-tools/examples/po/Makefile.am (POTFILES, SMALLPOTS): Update for
hello-ocaml.
(hello-ocaml.pot): New target.
(SMALLPOFILES_FOR_lang): Update for hello-ocaml.
($(srcdir)/../hello-ocaml/po/$(LL).po): New rule.
* gettext-tools/examples/check-examples (func_check__hello_ocaml): New function.
* gettext-tools/examples/README: Mention hello-ocaml.
* gettext-tools/doc/lang-ocaml.texi: Likewise.
* NEWS: Likewise.

--- a/gettext-tools/examples/Makefile.am
+++ b/gettext-tools/examples/Makefile.am
@@ -420,6 +420,17 @@ EXAMPLESFILES = \
   hello-d/m4/Makefile.am \
   hello-d/po/Makefile.am \
   \
+  hello-ocaml/INSTALL \
+  hello-ocaml/autogen.sh \
+  hello-ocaml/autoclean.sh \
+  hello-ocaml/dune.in \
+  hello-ocaml/dune-project.in \
+  hello-ocaml/hello.ml.in \
+  hello-ocaml/Makefile.am \
+  hello-ocaml/configure.ac \
+  hello-ocaml/m4/Makefile.am \
+  hello-ocaml/po/Makefile.am \
+  \
   hello-smalltalk/INSTALL \
   hello-smalltalk/autogen.sh \
   hello-smalltalk/autoclean.sh \
@@ -513,6 +524,7 @@ EXAMPLESDIRS = \
   hello-pascal \
   hello-modula2 \
   hello-d \
+  hello-ocaml \
   hello-smalltalk \
   hello-tcl \
   hello-tcl-tk \
