--- a/gettext-tools/gnulib-tests/Makefile.am
+++ b/gettext-tools/gnulib-tests/Makefile.am
@@ -1,5 +1,5 @@
 ## Makefile for the gettext-tools/gnulib-tests subdirectory of GNU gettext
-## Copyright (C) 2007-2023 Free Software Foundation, Inc.
+## Copyright (C) 2007-2025 Free Software Foundation, Inc.
 ##
 ## This program is free software: you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -15,6 +15,8 @@
 ## along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 ## Process this file with automake to produce Makefile.in.
+
+AM_CFLAGS =
 
 # Rules generated and collected by gnulib-tool.
 include Makefile.gnulib
